css/style.css
body {
	min-height: 100vh;
	background-color: #FFECE1;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.page {
	padding: 1rem;
}

img {
	max-width: min(90vw, 720px);
}

h1, h2, h3, h4, h5, h6, [class^='heading-'] {
	margin-bottom: 0;
	text-transform: uppercase;
	font-family: "Barlow Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
	color: #26264b;
}

h1 a, h1 a:focus, h1 a:active, h2 a, h2 a:focus, h2 a:active, h3 a, h3 a:focus, h3 a:active, h4 a, h4 a:focus, h4 a:active, h5 a, h5 a:focus, h5 a:active, h6 a, h6 a:focus, h6 a:active, [class^='heading-'] a, [class^='heading-'] a:focus, [class^='heading-'] a:active {
	color: inherit;
}

h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover, [class^='heading-'] a:hover {
	color: #ff6b00;
}

h1,
.heading-1 {
	font-size: 42px;
	line-height: 0.92857;
}

@media (min-width: 768px) {
	h1,
	.heading-1 {
		font-size: 63px;
	}
}

@media (min-width: 992px) {
	h1,
	.heading-1 {
		font-size: 98px;
	}
}

@media (min-width: 1200px) {
	h1,
	.heading-1 {
		font-size: 140px;
	}
}

h4 + h1,
.heading-4 + .heading-1 {
	margin-top: 25px;
}

@media (min-width: 1200px) {
	h4 + h1 {
		margin-top: 0;
	}
}

